Ещё пару ошибок пофикшено (связанные со Stream и define)